# futil

./: .gitignore  Makefile.am  README  configure.ac  dateToEpoch.cpp  emptydirs.cpp  logmsg.cpp  splitstring.cpp  stringtosplit.h  stringtovector.cpp  testDoIconv.cpp  testFilesDiffer.cpp  testRC4.cpp  testRandomString.cpp  testSetPerm.cpp  testSplitString.cpp  testSplitString2.cpp  testStringToWords.cpp  testUnicodeToUTF8.cpp  testValidMac.cpp  testWrapLine.cpp  testXmlCondition.cpp  testXmlEscape.cpp  testbase52  testbase52.cpp  testdates.cpp  testdirperms.cpp  testfutil.cpp  testlock.cpp  testsymlinks.cpp  testtotalspace.cpp
doc/: Doxyfile.in
futil/: FileTypeIdentifier.cpp  FileTypeIdentifier.h  FileTyper.cpp  FileTyper.h  FoundryUtilities.cpp  FoundryUtilities.h  Makefile.am  Process.cpp  Process.h  RC4.cpp  RC4.h  WmlDbg.h  debuglog.h  fileno.cpp  fileno.h  futil.cpp  futil.h
